%% EXTRACTED FROM LEGACY SOURCE — evidence of what exists, not a build target. Where this disagrees with a capability delta spec, the delta spec wins.

erDiagram
    CATEGORY ||--o{ PRODUCT : contains
    PRODUCT ||--o{ ITEM : contains
    CATEGORY ||--o{ ITEM : references

    PURCHASEORDER ||--o{ LINEITEM : contains
    PURCHASEORDER ||--o{ CONTACTINFO : "billing"
    PURCHASEORDER ||--o{ CONTACTINFO : "shipping"
    PURCHASEORDER ||--o{ CREDITCARD : "payment"

    CONTACTINFO ||--o{ ADDRESS : "has"

    LINEITEM ||--o{ PRODUCT : references
    LINEITEM ||--o{ ITEM : references

    SUPPLIERORDER ||--o{ LINEITEM : contains

    USER ||--o{ PURCHASEORDER : places

    %% Catalog Data Model
    CATEGORY {
        string catid PK
        string name
        string description
        string locale FK
    }

    PRODUCT {
        string productid PK
        string id
        string name
        string description
        string catid FK
        string locale FK
    }

    ITEM {
        string itemid PK
        string productid FK
        string productName
        string category FK
        string description
        string attribute1
        string attribute2
        string attribute3
        string attribute4
        string attribute5
        string imageLocation
        double listPrice
        double unitCost
        string locale FK
    }

    %% Order Data Model
    PURCHASEORDER {
        string poId PK
        string poUserId
        string poEmailId
        long poDate
        string poLocale "default: en_US"
        float poValue
    }

    LINEITEM {
        string lineNumber PK
        string poId FK
        string categoryId
        string productId
        string itemId
        int quantity
        float unitPrice "immutable at order time"
        int quantityShipped "initially 0"
    }

    CONTACTINFO {
        string contactId PK
        string givenName
        string familyName
        string email
        string telephone
    }

    ADDRESS {
        string addressId PK
        string contactId FK
        string streetAddress
        string streetAddress2
        string city
        string stateProvince
        string postalCode
        string country
    }

    CREDITCARD {
        string cardId PK
        string poId FK
        string cardNumber
        string cardType
        string expiryDate "MM/yyyy format"
    }

    %% Supplier Order Model
    SUPPLIERORDER {
        string poId PK
        long poDate
        string poStatus "PENDING or COMPLETED"
    }

    %% Authentication Model
    USER {
        string userName PK
        string password "max length implementation-dependent"
    }

    %% Locale Support
    LOCALE {
        string language
        string country
        string variant
    }
